Version: 0.4.2
Date: 30/5/25
  Features:
    - Added more quests and rewards.
  Changes:
    - Sentient Spider is now equipped with 1x [item=teslagun] instead of 4x [item=rocket-launcher].
    - Sentient Spider now has a larger equipment grid.
    - Trades can now only be made with researched qualities.
  Gui:
    - Changed the sink and generator mode icons.
  Bugfixes:
    - Fixed the factoriopedia simulation for hexaprisms and hexic underground belts.
    - Added localization for the crystalline fuel tech.
    - Fixed fish spawning.
    - Removed [item=cliff-explosives] from all planets except [planet=vulcanus].
  Balancing:
    - Supercharging is now unlocked on [planet=vulcanus].
    - Quality trades now have a trade productivity decrement based on the tier of quality, e.g. an uncommon trade loses 35% productivity.
      Negative productivity will decrease the trade's output rate, e.g. -100% prod means 1/2 of normal output rate, -200% prod means 1/3 of normal output rate, etc.
      This prevents the exploit of quickly generating unlimited [item=hexaprism-coin] on Nauvis before you have to visit other planets.
    - Trade productivity bars are now tracked separately for each quality, preventing easy exploits for high quality items.
---------------------------------------------------------------------------------------------------
Version: 0.4.1
Date: 27/5/25
  Major Features:
    - Added [planet=aquilo].
    - Added endgame resource on [planet=nauvis].
  Features:
    - Added energized thruster fuel and oxidizer recipes.
    - Added crystalline fuel as a burnable fuel.
  Minor Features:
    - Item/fluid names now show in the custom tooltips seen in trades and initial resources UI.
    - A tooltip now shows for coin amounts if they are abbreviated with units like "k" or "M".
  Changes:
    - [planet=vulcanus], [planet=fulgora], and [planet=gleba] now have three trades per hex instead of two.