@@ -335,7 +335,7 @@ rank-up-instructions-2=Sell a rare __1__ at a rare [entity=hex-core,quality=rare
 rank-up-instructions-3=Either buy or sell an epic __1__ from an epic [entity=hex-core,quality=epic] hex core on a planet where it is unobtainable from the natural resources.
 rank-up-instructions-4=Lose a space platform that's carrying a hextreme __1__ beyond [space-location=solar-system-edge].
 rank-bonus-unique-2=There is a __1__% chance that a hex core gets an extra trade involving this item.
-rank-bonus-unique-3=The bonus above now works on planets where this item is unobtainable from the natural resources.
+rank-bonus-unique-3=An interplanetary trade for this item appears at least once on each applicable planet.
 rank-bonus-unique-4=Any trade with this item that would be lost from a deleted hex core is instead copied over to a random claimed hex core with the fewest existing trades.
 rank-bonus-unique-5=This item can now be bought and sold at the [font=heading-2][color=180,255,0]Quantum Bazaar[.color][.font].
 selling-info=Selling counts even if no coins are involved.
@@ -394,6 +394,7 @@ item-rank-up=The item __1__ has reached the rank __2__!
 item-rank-up-max=The item __1__ has reached the maximum rank of __2__!
 bonus-trade=The hex core at __1__ has extra trades for __2__
 bonus-trades-retro=Hex cores have new trades for __1__
+bonus-trade-interplanetary=The hex core at __1__ has an [color=cyan]interplanetary trade[.color] for __2__! [space-age]
 trade-recovered=The previously deleted trade __1__ has been recovered in __2__
 cannot-afford=You cannot afford that!
 cannot-afford-with-cost=You cannot afford that! It costs __1__, but you have __2__.
