@@ -7,6 +7,7 @@ Date: 30/5/25
     - Sentient Spider is now equipped with 1x [item=teslagun] instead of 4x [item=rocket-launcher].
     - Sentient Spider now has a larger equipment grid.
     - Trades can now only be made with researched qualities.
+    - Changed silver rank bonus to guarantee at least one interplanetary trade for every item on every planet.
   Gui:
     - Changed the sink and generator mode icons.
   Bugfixes:
